[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytauto"
version = "0.1.0"
description = "AI-powered YouTube video creation from a single prompt."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Connor O'Dea", email = "connor@upscaledinc.com" }]
keywords = ["youtube", "video", "automation", "ai", "cli", "tts", "ffmpeg"]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "google-auth>=2.15",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy"]

[project.scripts]
ytauto = "ytauto.cli.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ytauto"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
